k8s/development-remote/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dev-johnpofo-monapp3-backend-service
  namespace: dev-johnpofo-monapp3-backend
spec:
  ports:
    - port: 3333
      targetPort: 3333
  selector:
    app: dev-johnpofo-monapp3-backend
