k8s/development-remote/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dev-johnpofo-monapp3-backend-ingress
  namespace: dev-johnpofo-monapp3-backend
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - dev.mydomain.api.flapi.org
      secretName: dev-johnpofo-monapp3-backend-tls
  rules:
    - host: dev.mydomain.api.flapi.org
      http:
        paths:
          - pathType: Prefix
            path: '/'
            backend:
              service:
                name: dev-johnpofo-monapp3-backend-service
                port:
                  number: 3333
